# AIL1AppV62

./: .replit  POSTGRES_TROUBLESHOOTING.md  README_POSTGRES.md  app.py  app_integration.py  app_simple.py  check_clickhouse_service.py  check_clickhouse_tables.py  clickhouse_config.py  clickhouse_llm_query.py  clickhouse_models.py  clickhouse_schema.sql  clickhouse_test_connection.py  clickhouse_without_vector.py  config.py  create_postgres_user.sh  database_service.py  db.py  debug_minio.sh  deployment_instructions.md  download_clickhouse24.sh  download_clickhouse25.sh  download_clickhouse_latest.sh  download_mistral_model.sh  faiss_info.py  fix_clickhouse_tables.py  fix_postgres_auth.sh  fresh_minio_install.sh  gpu_server_guide.md  gunicorn.conf.py  hybrid_config.py  hybrid_db_service.py  initialize_clickhouse_db.py  initialize_db.sh  install_clickhouse.sh  install_minio.sh  install_minio_updated.sh  install_nifi_airflow.sh  install_postgres_binary.sh  install_postgres_no_root.sh  (+53 more)
attached_assets/: Pasted-I-want-an-App-which-i-can-use-to-send-a-prompt-to-LLm-and-get-response-from-127-0-0-1-8080-The-LLM-1747203463268.txt
routes/: __init__.py  anomalies.py  dashboard.py  data_pipeline.py  database.py  kafka_browser.py  llm_assistant.py  local_llm.py  rag.py
services/: anomaly_detection.py  clickhouse_vector_db.py  embedding_service.py  faiss_vector_db.py  llm_mock_service.py  llm_recommendation_service.py  llm_service.py  llm_service_manager.py  local_llm_service.py  minio_service.py  mock_api_services.py  pg_vector_db.py  pgvector_db.py  postgres_vector_db.py  vector_db.py  (+1 more)
(+51 files in other folders)
