[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "trafilatura>=2.0.0",
    "routes>=2.5.1",
    "requests>=2.32.3",
    "aiohttp>=3.11.18",
    "statsmodels>=0.14.4",
    "scikit-learn>=1.6.1",
    "numpy>=2.2.5",
    "llama-cpp-python==0.2.26",
    "openai>=1.78.1",
    "faiss-cpu>=1.11.0",
    "pgvector>=0.4.1",
    "beautifulsoup4>=4.13.4",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "clickhouse-driver>=0.2.9",
    "sqlalchemy>=2.0.40",
    "urllib3>=2.4.0",
    "sse-starlette>=2.3.5",
    "pydantic==1.10.8",
]
